# linc

./: .clang-format  CMakeLists.txt  Makefile  README  flies
source/: main.c
source/matrix/: example.c  matrix.c  matrix.h
source/repl/: parse.c  prompt.c  repl.c  repl.h
source/vector/: example.c  vector.c  vector.h
